output/facebook/rocksdb/944.txt
I am trying to install RocksDB in Ubuntu 15.04 but i am getting the below error??? 

RocksDB/rocksdb-4.1# make all
  GEN      util/build_version.cc
  CC       util/crc32c.o
util/crc32c.cc: In function ‘void rocksdb::crc32c::Fast_CRC32(uint64_t_, const uint8_t__)’:
util/crc32c.cc:319:39: error: ‘_mm_crc32_u64’ was not declared in this scope
   *l = _mm_crc32_u64(_l, LE_LOAD64(_p));
                                       ^
Makefile:1133: recipe for target 'util/crc32c.o' failed
make: *_\* [util/crc32c.o] Error 1

Help me to get out of this error to install Rocksdb

